Small style changes

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input {
+  font-family: 'Josefin Sans', sans-serif;
 }
