--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,12 +6,19 @@
 
 body {
   margin: 0;
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 18px;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 12px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 input {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+@media screen and (min-width: 460px) {
+  /* stylelint-disable-next-line rule-empty-line-before */
+  body {
+    font-size: 18px;
+  }
 }
